[package]
name = "ch32x0-hal"
version = "0.1.0"
edition = "2021"

[dependencies]
ch32x0 = { version = "0.1.6", features = [
    "ch32x035",
], path = "../ch32-rs-nightlies/ch32x0" }
fugit = "0.3.7"

riscv-rt = { version = "0.11.0" }
# features = ["single-hart"]

qingke = { version = "0.1.5", path = "../qingke" }
# ch32v-rt = "0.0.2"
embedded-hal-02 = { package = "embedded-hal", version = "0.2.7", features = [
    "unproven",
] }
embedded-hal-1 = { version = "=1.0.0-rc.2", package = "embedded-hal" }
critical-section = { version = "1.1.2", features = ["restore-state-u8"] }
defmt = { version = "0.3.5", optional = true }
embassy-time = { version = "0.2.0", optional = true, features = [
    "tick-hz-32_768",
] }
embassy-sync = { version = "0.5.0", optional = true }
embassy-futures = { version = "0.1.1", optional = true }

[dev-dependencies]
panic-halt = "0.2.0"
embassy-executor = { version = "0.4.0", features = [
    "nightly",
    "integrated-timers",
    "arch-riscv32",
    "executor-thread",
] }

[features]
default = ["ch32x035f8u6", "embassy"]

embassy = ["embassy-time", "embassy-sync", "embassy-futures"]

device-selected = []


# 62K, 20K
ch32x035r8t6 = ["device-selected"]
ch32x035c8t6 = ["device-selected"]
ch32x035g8u6 = ["device-selected"]
ch32x035g8r6 = ["device-selected"]
ch32x035f8u6 = ["device-selected"]
# 48K, 20K
ch32x035f7p6 = []
# 62K, 20K
ch32x034f8u6 = []
ch32x034f8p6 = []
ch32x033f8p6 = []

[profile.release]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "z" # Optimize for size.
