[package]
name = "ch32x0-hal"
version = "0.1.0"
edition = "2021"

[dependencies]
ch32x0 = { version = "0.1.6", features = [
    "ch32x035",
    "rt",
], path = "../ch32-rs-nightlies/ch32x0" }
fugit = "0.3.7"

qingke = { version = "0.1.5", path = "../qingke", features = [
    "critical-section-impl",
] }
qingke-rt = { version = "0.1.5", path = "../qingke/qingke-rt", features = [
    "highcode",
] }
embedded-hal = { version = "1.0.0", package = "embedded-hal" }
critical-section = { version = "1.1.2", features = ["restore-state-u8"] }
defmt = { version = "0.3.5", optional = true }
embassy-sync = { version = "0.5.0", optional = true }
embassy-futures = { version = "0.1.1", optional = true }
aligned = "0.4.1"
embassy-time-driver = { version = "0.1.0", features = [
    "tick-hz-32_768",
], optional = true }

[dev-dependencies]
embassy-time = { version = "0.3.0", features = ["tick-hz-32_768"] }
panic-halt = "0.2.0"
embassy-executor = { version = "0.5.0", features = [
    "nightly",
    "integrated-timers",
    "arch-riscv32",
    "executor-thread",
] }
bitfield = "0.14.0"

[features]
default = ["ch32x035f8u6", "embassy"]

embassy = ["dep:embassy-sync", "dep:embassy-futures", "dep:embassy-time-driver"]

device-selected = []


# 62K, 20K
ch32x035r8t6 = ["device-selected"]
ch32x035c8t6 = ["device-selected"]
ch32x035g8u6 = ["device-selected"]
ch32x035g8r6 = ["device-selected"]
ch32x035f8u6 = ["device-selected"]
# 48K, 20K
ch32x035f7p6 = []
# 62K, 20K
ch32x034f8u6 = []
ch32x034f8p6 = []
ch32x033f8p6 = []

[profile.release]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "z" # Optimize for size.
