[package]
name = "ch32x0-hal"
version = "0.1.0"
edition = "2021"

[dependencies]
#ch32x0 = { version = "0.1.6", features = [
#    "ch32x035",
#    "rt",
#], path = "../ch32-rs-nightlies/ch32x0" }

ch32-metapac = { version = "0.0.3", features = [
    "ch32x035f7p6",
    "memory-x",
    "rt",
], path = "../ch32-data/build/ch32-metapac" }


qingke = { version = "0.1.5", path = "../qingke", features = [
    "critical-section-impl",
] }
qingke-rt = { version = "0.1.5", path = "../qingke/qingke-rt", features = [
    "highcode",
] }
embedded-hal = { version = "1.0.0", package = "embedded-hal" }
critical-section = { version = "1.1.2", features = ["restore-state-u8"] }
defmt = { version = "0.3.6", optional = true }
fugit = "0.3.7"


embassy-sync = { version = "0.5.0", optional = true }
embassy-futures = { version = "0.1.1", optional = true }
aligned = "0.4.1"
embassy-time-driver = { version = "0.1.0", features = [
    "tick-hz-1_000_000",
], optional = true }
embassy-time = { version = "0.3.0", features = [
    "tick-hz-1_000_000",
], optional = true }
nb = "1.1.0"
embedded-hal-nb = "1.0.0"
bitfield = "0.14.0"
heapless = "0.8.0"

[build-dependencies]
ch32-metapac = { version = "0.0.3", features = [
    "ch32x035f7p6",
    "metadata",
], path = "../ch32-data/build/ch32-metapac" }
proc-macro2 = "1.0.78"
quote = "1.0"

[features]
default = ["ch32x035f8u6", "embassy"]
embassy = [
    "dep:embassy-sync",
    "dep:embassy-futures",
    "dep:embassy-time-driver",
    "dep:embassy-time",
]
device-selected = []

# 62K, 20K
ch32x035r8t6 = ["device-selected"]
ch32x035c8t6 = ["device-selected"]
ch32x035g8u6 = ["device-selected"]
ch32x035g8r6 = ["device-selected"]
ch32x035f8u6 = ["device-selected"]
# 48K, 20K
ch32x035f7p6 = []
# 62K, 20K
ch32x034f8u6 = []
ch32x034f8p6 = []
ch32x033f8p6 = []

[profile.release]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "z" # Optimize for size.

[dev-dependencies]
panic-halt = "0.2.0"
embassy-executor = { version = "0.5.0", features = [
    "nightly",
    "integrated-timers",
    "arch-riscv32",
    "executor-thread",
] }
display-interface-spi = "0.5.0"
mipidsi = "0.7.1"
embedded-graphics = "0.8.1"

memory-lcd-spi = { path = "../memory-lcd-spi" }
embedded-hal-bus = "0.1.0"
